--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
     <script src="models/ProgressMessageObject.min.js" type="text/javascript"></script>
     <script src="models/WordSetObject.min.js" type="text/javascript"></script>
     <script src="models/WordObject.min.js" type="text/javascript"></script>
-    <script src="models/CardObject-min.js" type="text/javascript"></script>
-    <script src="models/PlayerObject-min.js" type="text/javascript"></script>
+    <script src="models/CardObject.min.js" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
     <script src="scripts/facets.js" type="text/javascript"></script>
   </body>
