--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-touch-fullscreen" content="no" />
     <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, minimum-scale=1, maximum-scale=5, user-scalable=yes" />
-    <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
+    <meta name="theme-color" id="themeColor" content="hsl(215, 100%, 3%)" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:title" content="Facets!" />
