--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily</h2>
-          <p>Daily puzzles can use any category. Some of them include a 5th card to make it that much harder 😈.</p>
+          <p>You can play any of the Daily puzzles listed below. Daily puzzles can use any category. Some of them include a 5th card to make it that much harder 😈.</p>
           <message style="padding: calc(2 * var(--defaultGap)) 0" v-if="!appStateIsGettingDailyGames && getDailyGamesWithWordSetNames.length === 0">
             <p>😢</p>
             <p>Check back tomorrow!</p>
