--- a/index.html
+++ b/index.html
@@ -319,11 +319,15 @@
                   </small>
                   {{game.hints.replace(/:/g," - ")}}
                 </a>
+                <button v-if="game.guesses === 0" class="inline report">
+                  <icon class="play"></icon>
+                  PLAY
+                </button>
                 <button v-if="game.solved && game.guesses > 0" class="inline report">
                   <icon class="check"></icon>
                   In {{game.guesses}}
                 </button>
-                <button v-if="!game.solved" class="inline report" :class="{alert: !game.solved && game.guesses > 0}">
+                <button v-if="!game.solved && game.guesses > 0" class="inline report" :class="{alert: !game.solved && game.guesses > 0}">
                   <icon class="nope"></icon>
                   {{game.guesses}} {{game.guesses === 1 ? "Try" : "Tries"}}
                 </button>
